apps/atv4-compassuol/base/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: atv4-compassuol
spec:
  parentRefs:
    - name: meu-gateway-dualstack
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  hostnames:
    - "frontend.aesthar.com.br"
  rules:
    - backendRefs:
      - name: frontend-service
        group: ''
        kind: Service
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
